File explorer thumbnail renders as a black image when using cycles rendered preview 3.0 #92628

Closed
opened 2021-10-29 23:15:27 +02:00 by Kenneth Yuen · 12 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-28 23:23, hash: b43077ba3a
Worked: version: New feature in 3.0

Short description of error
File explorer thumbnail renders as black image using cycles, when Camera View is selected in user preferences' preview type drop-down.
It works when rendered as wireframe, solid, and material preview, and render preview when using eevee.
preview thumbnails.png

Exact steps for others to reproduce the error

  • Open default scene
  • Ensure your user preferences' preview type is set to Camera View.
  • Switch to cycles render engine
  • Enter Render Preview mode in the viewport
  • Save file
  • Observe that the .blend file thumbnail is empty

This doesn't occur if there's no Camera or if Eevee is used as the render engine for example.

[Original repro steps below here]
Open blender, add a cube, add a material with voroni texture as base color, switch to rendered preview, add camera, add sun, save file, shows black thumbnail in file explorer.

Test.
I turned off all add-ons beside cycles and saved, and it rendered the rendered preview(can't replicate this so I might have disabled the cycles addon and turned it back on, which automatically switched it to eevee and that's what I saw).
I closed the blend file, opened a new blend, repeat setup, saved, thumbnail is black.

Tried turning on all addons on, save, black thumbnail.
Turned off all but cycles, save, black thumbnail

Cycles.blend
system-info.txt

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-10-28 23:23, hash: `b43077ba3a` Worked: version: New feature in 3.0 **Short description of error** File explorer thumbnail renders as black image using cycles, when `Camera View` is selected in user preferences' preview type drop-down. It works when rendered as wireframe, solid, and material preview, and render preview when using eevee. ![preview thumbnails.png](https://archive.blender.org/developer/F11604993/preview_thumbnails.png) **Exact steps for others to reproduce the error** - Open default scene - Ensure your user preferences' preview type is set to `Camera View`. - Switch to cycles render engine - Enter Render Preview mode in the viewport - Save file - Observe that the .blend file thumbnail is empty This doesn't occur if there's no Camera or if Eevee is used as the render engine for example. [Original repro steps below here] Open blender, add a cube, add a material with voroni texture as base color, switch to rendered preview, add camera, add sun, save file, shows black thumbnail in file explorer. Test. I turned off all add-ons beside cycles and saved, and it rendered the rendered preview(can't replicate this so I might have disabled the cycles addon and turned it back on, which automatically switched it to eevee and that's what I saw). I closed the blend file, opened a new blend, repeat setup, saved, thumbnail is black. Tried turning on all addons on, save, black thumbnail. Turned off all but cycles, save, black thumbnail [Cycles.blend](https://archive.blender.org/developer/F11604984/Cycles.blend) [system-info.txt](https://archive.blender.org/developer/F11605038/system-info.txt)
Author

Added subscriber: @Kenneth-Yuen

Added subscriber: @Kenneth-Yuen

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm here that a Camera + being in Cycles render preview mode causes a blank thumbnail. Will simplify repro steps as next change.

Can confirm here that a Camera + being in Cycles render preview mode causes a blank thumbnail. Will simplify repro steps as next change.

Added subscribers: @Sergey, @Jeroen-Bakker, @brecht, @mont29

Added subscribers: @Sergey, @Jeroen-Bakker, @brecht, @mont29

I think the offscreen GPU rendering code (ED_view3d_draw_offscreen_imbuf etc.) is simply not designed to work with deferred renderings like Cycles ones?

@Jeroen-Bakker or @Sergey/@brecht should know more, but I have the feeling this should be forcefully down-graded to an actual GPU rendering... Not a #core issue anyway, more for the #eevee_viewport and/or #render_cycles modules.

I think the offscreen GPU rendering code (`ED_view3d_draw_offscreen_imbuf` etc.) is simply not designed to work with deferred renderings like Cycles ones? @Jeroen-Bakker or @Sergey/@brecht should know more, but I have the feeling this should be forcefully down-graded to an actual GPU rendering... Not a #core issue anyway, more for the #eevee_viewport and/or #render_cycles modules.

Added subscriber: @Harley

Added subscriber: @Harley

This feature was added by @harley.

Indeed Cycles should not be used here. Also with Eevee this can behave poorly. The save operation is blocked until all shaders are compiled and images textures are loaded, which can take a long time in real world .blend files.

This feature was added by @harley. Indeed Cycles should not be used here. Also with Eevee this can behave poorly. The save operation is blocked until all shaders are compiled and images textures are loaded, which can take a long time in real world .blend files.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I suggest to remove the usage of the 3D viewport shading type and settings for preview generation, and change it back to solid.

This is nice in theory but for real production files, we just can't be generating GI probes, rendering shadow maps, compiling shaders, ... on .blend file save. Especially not as the default setting in the user preferences.

I suggest to remove the usage of the 3D viewport shading type and settings for preview generation, and change it back to solid. This is nice in theory but for real production files, we just can't be generating GI probes, rendering shadow maps, compiling shaders, ... on .blend file save. Especially not as the default setting in the user preferences.

This issue was referenced by 2206b6b9a0

This issue was referenced by 2206b6b9a04777b7325c8f30a49db23bc9a61317

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-29 16:29:31 +01:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92628
No description provided.