Fix T92628: .blend thumbnail renders black with Cycles 3D viewport render

Don't use Cycles for rendering thumbnails, fall back to Solid shading.

Differential Revision: https://developer.blender.org/D13406